[gd_scene load_steps=12 format=3 uid="uid://bq5gsjlkxilo6"]

[ext_resource type="Texture2D" uid="uid://03gu5bacsou1" path="res://assets/images/fire_ball.png" id="1_jmhfl"]
[ext_resource type="Script" uid="uid://btoelo0r7vdwh" path="res://characters/player/fire_ball.gd" id="1_wjwd0"]
[ext_resource type="Texture2D" uid="uid://d1gkk63ydkwur" path="res://assets/images/light_texture.png" id="2_vm4ms"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vm4ms"]
atlas = ExtResource("1_jmhfl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjwd0"]
atlas = ExtResource("1_jmhfl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqgcr"]
atlas = ExtResource("1_jmhfl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mhro5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vm4ms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjwd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqgcr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vm4ms"]
radius = 5.0990195

[sub_resource type="Animation" id="Animation_wjwd0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_vm4ms"]
resource_name = "default"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.75, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjwd0"]
_data = {
&"RESET": SubResource("Animation_wjwd0"),
&"default": SubResource("Animation_vm4ms")
}

[node name="FireBall" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 7
script = ExtResource("1_wjwd0")

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(1, 0.49019608, 0, 1)
texture = ExtResource("2_vm4ms")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mhro5")
autoplay = "default"
frame_progress = 0.65904295

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vm4ms")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wjwd0")
}
autoplay = "default"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-1, -1, 2, 2)

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_duration_timer_timeout"]
